<resources>
    <string name="app_name">Cálculo Estructuras</string>
    <string name="action_settings">Configuración</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="hello">Bienvenido a Cálculo De Estructuras</string>
    <string name="title_activity_matrices_elemtales">Matrices Elementales</string>
    <string name="barra"> Barra </string>
    <string name="title_activity_matriz_sff">Matriz SFF</string>
    <string name="title_activity_matrices_de_rigidez">Matrices De Rigidez </string>
    <string name="title_matrices_rigidez">Matrices</string>
    <string name="uno"> NUDOS </string>
    <string name="title_activity_matriz_global">Matriz Global</string>
    <string name="title_activity_matriz_af">Matriz AF</string>
    <string name="title_activity_opciones_metodo">Opciones Método</string>
    <string name="title_activity_porticos_planos">Pórticos Planos</string>
    <string name="datosIngresar">Datos a ingresar: </string>
    <string name="title_activity_analizar_resultados">Analizar Resultados</string>
    <string name="title_analizar">Analizar</string>
    <string name="title_activity_nudos_creados">Nudos Creados</string>
    <string name="nudo_cargado">Nudo: </string>
    <string name="title_activity_barras_creadas">Barras Creadas</string>
    <string name="barras_cargados_por_usuario"> Barras Ingresadas</string>
    <string name="nudos_cargados_por_usuario">Nudos Ingresados</string>
    <string name="title_activity_agregar_nudo">Agregar Nudo</string>
    <string name="nudo">Coordenadas de Nudo </string>
    <string name="title_activity_agregar_barra">Agregar Barra</string>
    <string name="title_activity_conectividades_creadas">Conectividades Creadas</string>
    <string name="title_activity_activity_carga_conectividades">Asignación de Conectividades</string>
    <string name="iner">Mom. Iner.:</string>
    <string name="inercia">Inercia: </string>
    <string name="area">Área: </string>
    <string name="elast">Mod. Elast.: </string>
    <string name="titulo_conectividad">Conectividad: </string>
    <string name="title_activity_agregar_conectividad">Agregar Conectividad</string>
    <string name="nudoi">Nudo Inicial: </string>
    <string name="nudof">Nudo Final: </string>
    <string name="title_activity_vinculos_creados">Vínculos Creados</string>
    <string name="title_activity_agregar_vinculo">Agregar Vínculo</string>
    <string name="title_activity_cargas">Cargas</string>
    <string name="title_activity_cargas_en_nudos">Cargas En Nudos</string>
    <string name="title_activity_agregar_carga_en_nudo">Agregar Carga En Nudo</string>
    <string name="title_activity_cargas_en_barras">Cargas En Barras</string>
    <string name="title_activity_agregar_carga_en_barra">Agregar Carga En Barra</string>
    <string name="barra_properties">Propiedades Mecánicas de la Barra:</string>
    <string name="title_activity_asignacion_vinculos">Asignación de Vínculos</string>
    <string name="title_activity_nuevo_ejercicio">Nuevo Ejercicio</string>
    <string name="title_activity_seleccionar_ejercicio">Seleccionar ejercicio</string>
    <string name="elasticidad">Elasticidad: </string>
    <string name="carga_distribuida">Carga Distribuida:</string>
    <string name="carga_concentrada_xy">Carga concentrada XY:</string>
    <string name="carga_en_x">Carga en X: </string>
    <string name="carga_en_y">Carga en Y: </string>
    <string name="distancia_xy">Distancia al nudo inicial:</string>
    <string name="carga_puntual_z">Carga concentrada Z:</string>
    <string name="carga_en_z">Carga en Z:</string>
    <string name="distancia_z">Distancia al nudo inicial:</string>
    <string name="action_help">Ayuda</string>
    <string name="action_about">Acerca de</string>
</resources>
