<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_agregar_conectividad"
    tools:context="com.example.nico.calculoestructuras.Activities.AgregarConectividadActivity">
    <TextView
        android:id="@+id/conec_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_conectividad"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="#003050"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/barra"
        android:layout_below="@id/conec_titulo"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/barra"
        android:textSize="25dp"
        android:background="#885159"/>


    <TextView
        android:id="@+id/ni"
        android:layout_below="@id/barra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/nudoi"
        android:textSize="20dp" />

    <Spinner
        android:layout_below="@+id/barra"
        android:layout_toRightOf="@id/ni"
        android:id="@+id/spi_nudos_conec_inic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp">
    </Spinner>

    <TextView
        android:id="@+id/nf"
        android:layout_below="@id/spi_nudos_conec_inic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/nudof"
        android:textSize="20dp" />

    <Spinner
        android:layout_toRightOf="@id/nf"
        android:layout_below="@+id/spi_nudos_conec_inic"
        android:id="@+id/spi_nudos_conec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp" >
    </Spinner>

    <!--

    <ImageView
        android:src="@drawable/tick"
        android:layout_below="@id/spi_nudos_conec"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="100dp"
        android:layout_alignParentRight="true"
        android:onClick="guardarConectividad"
        />
    <ImageView
        android:src="@drawable/cross"
        android:layout_below="@id/spi_nudos_conec"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:onClick="descartarConectividad"
        />
    -->
</RelativeLayout>
